fix swal z-index

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -30,3 +30,7 @@ body::-webkit-scrollbar {
 img.loading-icon {
     content: url("assets/images/90-ring-with-bg.svg");
 }
+
+.swal2-container {
+    z-index: 114514;
+}
